# CreateVectoreAndRemoveAllPrimesNumbers

./: CMakeLists.txt  main.cpp
